--- a/products-nav/details/building-tracks/index.html
+++ b/products-nav/details/building-tracks/index.html
@@ -53,17 +53,22 @@
       <div class="description">
         <h1 class="description__heading">Детали</h1>
         <p class="description__text">
-          Веар Сервис предлагает широкий ассортимент износостойких деталей, которые производятся из лучших мировых марок износостойких сталей. В нашем каталоге вы найдете самые типичные применения износостойких деталей для различных отраслей промышленности
+          Веар Сервис предлагает широкий ассортимент износостойких деталей, которые производятся из лучших мировых марок
+          износостойких сталей. В нашем каталоге вы найдете самые типичные применения износостойких деталей для
+          различных отраслей промышленности
         </p>
       </div>
 
       <div class="detail-inner">
         <p class="detail-inner__text">
-          Навесное оборудование постоянно подвергается сильному износу из-за абразивных частиц, которые содержатся в земной породе.
-          Мы делаем футеровку и бронирование оборудования, используем стойкие к вмятинам и абразивному стиранию материалы — это предотвратит износ и увеличит срок службы
+          Навесное оборудование постоянно подвергается сильному износу из-за абразивных частиц, которые содержатся
+          в земной породе.
+          Мы делаем футеровку и бронирование оборудования, используем стойкие к вмятинам и абразивному стиранию
+          материалы — это предотвратит износ и увеличит срок службы
         </p>
         <p class="detail-inner__text">
-          Мы делаем футеровку и бронирование оборудования, используем стойкие к вмятинам и абразивному стиранию материалы — это предотвратит износ и увеличит срок службы
+          Мы делаем футеровку и бронирование оборудования, используем стойкие к вмятинам и абразивному стиранию
+          материалы — это предотвратит износ и увеличит срок службы
         </p>
 
         <div class="detail-inner__wrapper">
@@ -88,7 +93,8 @@
                 <form action="" method="post">
                   <input type="tel" class="detail-inner__input" placeholder="Номер телефона">
                   <input type="checkbox" class="detail-inner__checkbox" name="checkbox" id="accept">
-                  <label class="detail-inner__label" for="accept">Согласен на обработку <span class="detail-inner__span">персональных данных</span></label>
+                  <label class="detail-inner__label" for="accept">Согласен на обработку <span
+                          class="detail-inner__span">персональных данных</span></label>
                   <button class="detail-inner__btn  btn" type="submit">Заказать</button>
                 </form>
               </div>
@@ -96,7 +102,12 @@
 
             <div class="detail-inner__bottom">
               <p class="detail-inner__text">
-                Наиболее часто применяемый вид навесного оборудования экскаватора — общеземельный ковш, который используется для грунтов I-IV категории. Какие только работы не производят с помощью этих незаметных «трудяг» — роют котлованы и траншеи, используют для погрузочных работ, разрабатывают карьеры. В зависимости от вида работ, мы можем провести для Вас комплекс мероприятий по футеровке и бронированию ковша, или защитить отдельные его части. Для защиты ковша от интенсивного абразивного износа мы предлагаем проверенные на практике решения и лучшие материалы
+                Наиболее часто применяемый вид навесного оборудования экскаватора — общеземельный ковш, который
+                используется для грунтов I-IV категории. Какие только работы не производят с помощью этих незаметных
+                «трудяг» — роют котлованы и траншеи, используют для погрузочных работ, разрабатывают карьеры.
+                В зависимости от вида работ, мы можем провести для Вас комплекс мероприятий по футеровке и бронированию
+                ковша, или защитить отдельные его части. Для защиты ковша от интенсивного абразивного износа
+                мы предлагаем проверенные на практике решения и лучшие материалы
               </p>
             </div>
           </div>
