--- a/gallery-nav/index.html
+++ b/gallery-nav/index.html
@@ -4,22 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Веарсервис</title>
-  <link rel="stylesheet" href="../../css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 </head>
 <body>
 <header class="main-header">
   <div class="header__wrapper-inner">
     <div class="logo">
-      <a href="../../index.html" class="logo__link">
-        <img src="../../img/logo.svg" width="203" height="58" alt="" class="logo__img">
+      <a href="../index.html" class="logo__link">
+        <img src="../img/logo.svg" width="203" height="58" alt="" class="logo__img">
       </a>
     </div>
 
     <nav class="nav">
       <ul class="main-menu">
-        <li class="main-menu__items  main-menu__items--active"><a class="main-menu__link">Продукция</a></li>
-        <li class="main-menu__items"><a href="" class="main-menu__link">Сделали</a></li>
+        <li class="main-menu__items"><a href="../products-nav/details/index.html" class="main-menu__link">Продукция</a>
+        </li>
+        <li class="main-menu__items  main-menu__items--active"><a href="" class="main-menu__link">Сделали</a></li>
         <li class="main-menu__items"><a href="" class="main-menu__link">Статьи</a></li>
         <li class="main-menu__items"><a href="" class="main-menu__link">О компании</a></li>
         <li class="main-menu__items"><a href="" class="main-menu__link">Контакты</a></li>
@@ -35,83 +36,85 @@
 
 <main>
   <div class="container">
-    <section class="sub-nav">
-      <ul class="sub-nav__list">
-        <li class="sub-nav__item  sub-nav__item--active"><a href="" class="sub-nav__link">Детали</a></li>
-        <li class="sub-nav__item"><a href="../../products-nav/materials/index.html" class="sub-nav__link">Материалы</a></li>
-        <li class="sub-nav__item"><a href="../services/index.html" class="sub-nav__link">Услуги</a></li>
-      </ul>
+    <section class="gallery-container">
+      <h1 class="gallery-container__heading main-heading">Галерея работ</h1>
+      <article class="gallery-card">
+        <a href="" class="gallery-card__link">
+          <p class="gallery-card__date">27 Ноября 2017</p>
+          <h2 class="gallery-card__heading">Броня планетарного бетоносмесителя</h2>
+          <img class="gallery-card__img" src="../img/gallery-1.png" alt="Броня планетарного бетоносмесителя">
+        </a>
+      </article>
 
-      <div class="sub-nav__form">
-        <form action="" method="get">
-          <input type="search" class="sub-nav__input" placeholder="Например: футеровка">
-          <a href="" class="sub-nav__link-icon"></a>
-        </form>
+      <article class="gallery-card">
+        <a href="" class="gallery-card__link">
+          <p class="gallery-card__date">13 Ноября 2017</p>
+          <h2 class="gallery-card__heading">Била дробилки</h2>
+          <img class="gallery-card__img" src="../img/gallery-2.png" alt="Била дробилки">
+        </a>
+      </article>
+
+      <article class="gallery-card  gallery-card--margin-none">
+        <a href="" class="gallery-card__link">
+          <p class="gallery-card__date">17 Октября 2017</p>
+          <h2 class="gallery-card__heading">Улитки шламового насоса</h2>
+          <img class="gallery-card__img" src="../img/gallery-3.png" alt="Улитки шламового насоса">
+        </a>
+      </article>
+
+      <article class="gallery-card">
+        <a href="" class="gallery-card__link">
+          <p class="gallery-card__date">17 Октября 2017</p>
+          <h2 class="gallery-card__heading">Отбойные плиты</h2>
+          <img class="gallery-card__img" src="../img/gallery-4.png" alt="Отбойные плиты">
+        </a>
+      </article>
+
+      <article class="gallery-card  gallery-card--margin-none">
+        <a href="" class="gallery-card__link">
+          <p class="gallery-card__date">03 Октября 2017</p>
+          <h2 class="gallery-card__heading">Мембрана износостойкая</h2>
+          <img class="gallery-card__img" src="../img/gallery-5.png" alt="Мембрана износостойкая">
+        </a>
+      </article>
+
+      <article class="gallery-card  gallery-card--margin-none">
+        <a href="" class="gallery-card__link">
+          <p class="gallery-card__date">03 Октября 2017</p>
+          <h2 class="gallery-card__heading">Износостойкие полушестерни</h2>
+          <img class="gallery-card__img" src="../img/gallery-6.png" alt="Износостойкие полушестерни">
+        </a>
+      </article>
+
+      <article class="gallery-card">
+        <a href="" class="gallery-card__link">
+          <p class="gallery-card__date">18 Сентября 2017</p>
+          <h2 class="gallery-card__heading">Лопатки смесителя</h2>
+          <img class="gallery-card__img" src="../img/gallery-7.png" alt="Лопатки смесителя">
+        </a>
+      </article>
+
+      <article class="gallery-card">
+        <a href="" class="gallery-card__link">
+          <p class="gallery-card__date">18 Сентября 2017</p>
+          <h2 class="gallery-card__heading">Высокопрочная чаша</h2>
+          <img class="gallery-card__img" src="../img/gallery-8.png" alt="Высокопрочная чаша">
+        </a>
+      </article>
+
+      <article class="gallery-card  gallery-card--margin-none">
+        <a href="" class="gallery-card__link">
+          <p class="gallery-card__date">31 Августа 2017</p>
+          <h2 class="gallery-card__heading">Решетки износостойкие</h2>
+          <img class="gallery-card__img" src="../img/gallery-9.png" alt="Решетки износостойкие">
+        </a>
+      </article>
+
+      <div class="gallery-container__btn-wrapper">
+        <a href="" class="gallery-container__btn  btn">Все работы</a>
+        <span class="gallery-container__icon"></span>
       </div>
-    </section>
 
-    <section class="main-content">
-      <div class="description">
-        <h1 class="description__heading">Детали</h1>
-        <p class="description__text">
-          Веар Сервис предлагает широкий ассортимент износостойких деталей, которые производятся из лучших мировых марок износостойких сталей. В нашем каталоге вы найдете самые типичные применения износостойких деталей для различных отраслей промышленности
-        </p>
-      </div>
-
-      <section class="details-container">
-        <article class="detail-card">
-          <a href="" class="detail-card__link">
-            <img class="detail-card__img" src="../../img/concrete-mixer.png" width="360" height="260" alt="Бетоносмесители">
-            <h2 class="detail-card__heading">Бетоносмесители</h2>
-            <p class="detail-card__text">
-              Износостойкая броня, заслонки, рычаги, скребки и лопасти
-            </p>
-
-          </a>
-        </article>
-
-        <article class="detail-card">
-          <a href="" class="detail-card__link">
-            <img class="detail-card__img" src="../../img/road-constraction.png" width="360" height="260" alt="Дорожно-строительная">
-            <h2 class="detail-card__heading">Дорожно-строительная</h2>
-            <p class="detail-card__text">
-              Детали для ковшей, гидромолотов, отвалов, рыхлителей
-            </p>
-          </a>
-        </article>
-
-        <article class="detail-card">
-          <a href="" class="detail-card__link">
-            <img class="detail-card__img" src="../../img/recycling.png" width="360" height="259" alt="Вторичная переработка">
-            <h2 class="detail-card__heading">Вторичная переработка</h2>
-            <p class="detail-card__text">
-              Ножи для измельчения, футеровка,
-              детали многочелюстных захватов
-            </p>
-          </a>
-        </article>
-
-        <article class="detail-card">
-          <a href="" class="detail-card__link">
-            <img class="detail-card__img" src="../../img/screening-and-crushing.png" width="360" height="260" alt="Дробильно-сортировочная">
-            <h2 class="detail-card__heading">Дробильно-сортировочная</h2>
-            <p class="detail-card__text">
-              Детали для разного типа дробилок, грохота, питателей, мельниц
-            </p>
-          </a>
-        </article>
-
-        <article class="detail-card">
-          <a href="" class="detail-card__link">
-            <img class="detail-card__img" src="../../img/other-details.png" width="360" height="260" alt="Прочие изделия">
-            <h2 class="detail-card__heading">Прочие изделия</h2>
-            <p class="detail-card__text">
-              Стрелковые объекты, футеровка,
-              детали многочелюстных захватов
-            </p>
-          </a>
-        </article>
-      </section>
     </section>
 
 
