--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
         <nav class="nav">
           <ul class="main-menu">
-            <li class="main-menu__items"><a href="" class="main-menu__link">Продукция</a></li>
-            <li class="main-menu__items"><a href="" class="main-menu__link">Сделали</a></li>
+            <li class="main-menu__items"><a href="products-nav/details/index.html" class="main-menu__link">Продукция</a>
+            </li>
+            <li class="main-menu__items"><a href="gallery-nav/index.html" class="main-menu__link">Сделали</a></li>
             <li class="main-menu__items"><a href="" class="main-menu__link">Статьи</a></li>
             <li class="main-menu__items"><a href="" class="main-menu__link">О компании</a></li>
             <li class="main-menu__items"><a href="" class="main-menu__link">Контакты</a></li>
@@ -46,7 +47,7 @@
             Производим изделия из иносостойкой стали марок: Hardox, Quard, Xar и биметаллических плит CDP
           </p>
           <div class="promo__video">
-            <p class="promo__video-text"><a href="" class="promo__video-link">Посмотреть видео о компании</a></p>
+            <a href="" class="promo__video-link">Посмотреть видео о компании</a>
           </div>
           <a href="" class="btn  promo__btn">Продукция</a>
         </div>
@@ -63,11 +64,13 @@
             <div class="about__descr">
               <p class="about__descr-text">
                 Производственное предприятие с полным циклом металлообработки.
-                Среди наших постоянных заказчиков горнодобывающие предприятия, металлургические комбинаты, строительные компании.
+                Среди наших постоянных заказчиков горнодобывающие предприятия, металлургические комбинаты, строительные
+                компании.
 
               </p>
               <p class="about__descr-text">
-                В этих сферах оборудование быстро приходит в негодность, поэтому мы изготавливаем детали из износостойкой стали Хардокс и других высокопрочных материалов.
+                В этих сферах оборудование быстро приходит в негодность, поэтому мы изготавливаем детали
+                из износостойкой стали Хардокс и других высокопрочных материалов.
               </p>
             </div>
 
@@ -76,7 +79,7 @@
               <a href="" class="about__articles-link  link">Качество - это наша работа</a>
               <a href="" class="about__articles-link  link">В поисках новой стратегии борьбы с износом</a>
               <a href="" class="about__articles-link  link">Высокопрочные стали для спецтехники и оборудования</a>
-              <a href="" class="about__articles-link  link">HARDOX  — Ваше конкурентное преимущество</a>
+              <a href="" class="about__articles-link  link">HARDOX — Ваше конкурентное преимущество</a>
             </div>
           </div>
 
@@ -321,8 +324,8 @@
 
               <div class="footer-low__social">
                 <a href="" class="footer-low__facebook-link footer-low__social-link" target="_blank">Facebook</a>
-                <a href="" class="footer-low__youtube-link footer-low__social-link" target="_blank">YouTube</a>
                 <a href="" class="footer-low__instagram-link footer-low__social-link" target="_blank">Instagram</a>
+                <a href="" class="footer-low__youtube-link footer-low__social-link" target="_blank">YouTube</a>
               </div>
 
               <div class="footer-low__copyright">
@@ -336,14 +339,12 @@
       </div>
     </div>
   </footer>
-  
+
 </div>
 
 
 </body>
 </html>
-
-
 
 
 
