--- a/products-nav/details/index.html
+++ b/products-nav/details/index.html
@@ -11,15 +11,15 @@
 <header class="main-header">
   <div class="header__wrapper-inner">
     <div class="logo">
-      <a href="#" class="logo__link">
-        <img src="" alt="" class="logo__img">
+      <a href="../../index.html" class="logo__link">
+        <img src="../../img/logo.svg" width="203" height="58" alt="" class="logo__img">
       </a>
     </div>
 
     <nav class="nav">
       <ul class="main-menu">
-        <li class="main-menu__items  nav-list__item--active"><a class="main-menu__link">Продукция</a></li>
-        <li class="main-menu__items"><a href="" class="main-menu__link">Сделали</a></li>
+        <li class="main-menu__items  main-menu__items--active"><a class="main-menu__link">Продукция</a></li>
+        <li class="main-menu__items"><a href="../../gallery-nav/index.html" class="main-menu__link">Сделали</a></li>
         <li class="main-menu__items"><a href="" class="main-menu__link">Статьи</a></li>
         <li class="main-menu__items"><a href="" class="main-menu__link">О компании</a></li>
         <li class="main-menu__items"><a href="" class="main-menu__link">Контакты</a></li>
@@ -27,7 +27,7 @@
     </nav>
 
     <div class="phone">
-      <p class="phone__text"><span class="phone__code">+7 495</span>727-08-09</p>
+      <p class="phone__text"><span class="phone__code">+7 495 </span>727-08-09</p>
     </div>
 
   </div>
@@ -37,14 +37,16 @@
   <div class="container">
     <section class="sub-nav">
       <ul class="sub-nav__list">
-        <li class="sub-nav__item"><a href="" class="sub-nav__link">Детали</a></li>
-        <li class="sub-nav__item"><a href="" class="sub-nav__link">Материалы</a></li>
-        <li class="sub-nav__item"><a href="" class="sub-nav__link">Услуги</a></li>
+        <li class="sub-nav__item  sub-nav__item--active"><a href="" class="sub-nav__link">Детали</a></li>
+        <li class="sub-nav__item"><a href="../../products-nav/materials/index.html" class="sub-nav__link">Материалы</a>
+        </li>
+        <li class="sub-nav__item"><a href="../services/index.html" class="sub-nav__link">Услуги</a></li>
       </ul>
 
       <div class="sub-nav__form">
         <form action="" method="get">
           <input type="search" class="sub-nav__input" placeholder="Например: футеровка">
+          <a href="" class="sub-nav__link-icon"></a>
         </form>
       </div>
     </section>
@@ -53,56 +55,69 @@
       <div class="description">
         <h1 class="description__heading">Детали</h1>
         <p class="description__text">
-          Веар Сервис предлагает широкий ассортимент износостойких деталей, которые производятся из лучших мировых марок износостойких сталей. В нашем каталоге вы найдете самые типичные применения износостойких деталей для различных отраслей промышленности
+          Веар Сервис предлагает широкий ассортимент износостойких деталей, которые производятся из лучших мировых марок
+          износостойких сталей. В нашем каталоге вы найдете самые типичные применения износостойких деталей для
+          различных отраслей промышленности
         </p>
       </div>
 
       <section class="details-container">
         <article class="detail-card">
-          <img class="detail-card__img" src="" alt="Бетоносмесители">
-          <h2 class="detail-card__heading">Бетоносмесители</h2>
-          <p class="detail-card__text">
-            Износостойкая броня, заслонки, рычаги, скребки и лопасти
-          </p>
+          <a href="" class="detail-card__link">
+            <img class="detail-card__img" src="../../img/concrete-mixer.png" width="360" height="260"
+                 alt="Бетоносмесители">
+            <h2 class="detail-card__heading">Бетоносмесители</h2>
+            <p class="detail-card__text">
+              Износостойкая броня, заслонки, рычаги, скребки и лопасти
+            </p>
 
+          </a>
         </article>
 
         <article class="detail-card">
-          <img class="detail-card__img" src="" alt="Дорожно-строительная">
-          <h2 class="detail-card__heading">Дорожно-строительная</h2>
-          <p class="detail-card__text">
-            Детали для ковшей, гидромолотов, отвалов, рыхлителей
-          </p>
-
+          <a href="" class="detail-card__link">
+            <img class="detail-card__img" src="../../img/road-constraction.png" width="360" height="260"
+                 alt="Дорожно-строительная">
+            <h2 class="detail-card__heading">Дорожно-строительная</h2>
+            <p class="detail-card__text">
+              Детали для ковшей, гидромолотов, отвалов, рыхлителей
+            </p>
+          </a>
         </article>
 
         <article class="detail-card">
-          <img class="detail-card__img" src="" alt="Вторичная переработка">
-          <h2 class="detail-card__heading">Вторичная переработка</h2>
-          <p class="detail-card__text">
-            Ножи для измельчения, футеровка,
-            детали многочелюстных захватов
-          </p>
-
+          <a href="" class="detail-card__link">
+            <img class="detail-card__img" src="../../img/recycling.png" width="360" height="259"
+                 alt="Вторичная переработка">
+            <h2 class="detail-card__heading">Вторичная переработка</h2>
+            <p class="detail-card__text">
+              Ножи для измельчения, футеровка,
+              детали многочелюстных захватов
+            </p>
+          </a>
         </article>
 
         <article class="detail-card">
-          <img class="detail-card__img" src="" alt="Дробильно-сортировочная">
-          <h2 class="detail-card__heading">Дробильно-сортировочная</h2>
-          <p class="detail-card__text">
-            Детали для разного типа дробилок, грохота, питателей, мельниц
-          </p>
-
+          <a href="" class="detail-card__link">
+            <img class="detail-card__img" src="../../img/screening-and-crushing.png" width="360" height="260"
+                 alt="Дробильно-сортировочная">
+            <h2 class="detail-card__heading">Дробильно-сортировочная</h2>
+            <p class="detail-card__text">
+              Детали для разного типа дробилок, грохота, питателей, мельниц
+            </p>
+          </a>
         </article>
 
         <article class="detail-card">
-          <img class="detail-card__img" src="" alt="Прочие изделия">
-          <h2 class="detail-card__heading">Прочие изделия</h2>
-          <p class="detail-card__text">
-            Стрелковые объекты, футеровка,
-            детали многочелюстных захватов
-          </p>
-
+          <a href="" class="detail-card__link">
+            <img class="detail-card__img" src="../../img/other-details.png" width="360" height="260"
+                 alt="Прочие изделия">
+            <h2 class="detail-card__heading">Прочие изделия</h2>
+            <p class="detail-card__text">
+              Стрелковые объекты, футеровка,
+              детали многочелюстных захватов
+            </p>
+          </a>
         </article>
       </section>
     </section>
