--- a/products-nav/materials/index.html
+++ b/products-nav/materials/index.html
@@ -11,15 +11,15 @@
 <header class="main-header">
   <div class="header__wrapper-inner">
     <div class="logo">
-      <a href="#" class="logo__link">
-        <img src="" alt="" class="logo__img">
+      <a href="../../index.html" class="logo__link">
+        <img src="../../img/logo.svg" width="203" height="58" alt="" class="logo__img">
       </a>
     </div>
 
     <nav class="nav">
       <ul class="main-menu">
         <li class="main-menu__items  nav-list__item--active">Продукция</li>
-        <li class="main-menu__items"><a href="" class="main-menu__link">Сделали</a></li>
+        <li class="main-menu__items"><a href="../../gallery-nav/index.html" class="main-menu__link">Сделали</a></li>
         <li class="main-menu__items"><a href="" class="main-menu__link">Статьи</a></li>
         <li class="main-menu__items"><a href="" class="main-menu__link">О компании</a></li>
         <li class="main-menu__items"><a href="" class="main-menu__link">Контакты</a></li>
@@ -27,7 +27,7 @@
     </nav>
 
     <div class="phone">
-      <p class="phone__text"><span class="phone__code">+7 495</span>727-08-09</p>
+      <p class="phone__text"><span class="phone__code">+7 495 </span>727-08-09</p>
     </div>
 
   </div>
@@ -37,27 +37,30 @@
   <div class="container">
     <section class="sub-nav">
       <ul class="sub-nav__list">
-        <li class="sub-nav__item"><a href="" class="sub-nav__link">Детали</a></li>
+        <li class="sub-nav__item"><a href="../../products-nav/details/index.html" class="sub-nav__link">Детали</a></li>
         <li class="sub-nav__item  sub-nav__item--active"><a class="sub-nav__link">Материалы</a></li>
-        <li class="sub-nav__item"><a href="" class="sub-nav__link">Услуги</a></li>
+        <li class="sub-nav__item"><a href="../services/index.html" class="sub-nav__link">Услуги</a></li>
       </ul>
 
       <div class="sub-nav__form">
         <form action="" method="get">
           <input type="search" class="sub-nav__input" placeholder="Например: футеровка">
+          <a href="" class="sub-nav__link-icon"></a>
         </form>
       </div>
     </section>
 
     <section class="main-content">
-      <div class="description">
+      <div class="description  description--materials">
         <h1 class="description__heading">Материалы</h1>
-        <p class="description__text">
-          Существует множество износостойких материалов, и каждый производитель будет убеждать вас, что именно его материал самый лучший, хотя это не всегда так.
+        <p class="description__text  description__text--materials">
+          Существует множество износостойких материалов, и каждый производитель будет убеждать вас, что именно его
+          материал самый лучший, хотя это не всегда так.
         </p>
 
         <p class="description__text">
-          Вы можете быть уверены, что выбирая сотрудничество с «Веар Сервис» вы получите полную и достоверную информацию по интересующим вас материалам и исчерпывающие консультации от наших технических специалистов.
+          Вы можете быть уверены, что выбирая сотрудничество с «Веар Сервис» вы получите полную и достоверную информацию
+          по интересующим вас материалам и исчерпывающие консультации от наших технических специалистов.
         </p>
 
 
@@ -66,45 +69,57 @@
       <section class="materials-container">
 
         <article class="material-card  material-card--first">
-          <img class="material-card__img" src="" alt="Hardox">
-          <span class="material-card__text">Хороший выбор</span>
+          <a href="" class="materials-card__link  materials-card__link--first">
+            <img class="material-card__img  material-card__img--first" src="../../img/hardox.png" alt="Hardox"
+                 width="461" height="120">
+            <span class="material-card__text  material-card__text--good-choice">Хороший выбор</span>
+          </a>
+
 
         </article>
 
         <article class="material-card">
-          <img class="material-card__img" src="" alt="Наплавочные материалы CASTOLIN">
-          <h2 class="material-card__heading">Наплавочные материалы CASTOLIN</h2>
-          <p class="material-card__text">
-            Проволока (MIG/MAG), TIG прутки, cамозащитная проволока, порошковая проволока, электроды (ММА)
-          </p>
-
+          <a href="" class="materials-card__link">
+            <img class="material-card__img" src="../../img/castolin.png" width="555" height="259"
+                 alt="Наплавочные материалы CASTOLIN">
+            <h2 class="material-card__heading">Наплавочные материалы CASTOLIN</h2>
+            <p class="material-card__text">
+              Проволока (MIG/MAG), TIG прутки, cамозащитная проволока, порошковая проволока, электроды (ММА)
+            </p>
+          </a>
         </article>
 
         <article class="material-card">
-          <img class="material-card__img" src="" alt="Биметаллические плиты OVERLAY">
-          <h2 class="material-card__heading">Биметаллические плиты OVERLAY</h2>
-          <p class="material-card__text">
-            Износостойкие плиты порошковые, CDP 4666, CDP 4624, CDP 3550
-          </p>
-
+          <a href="" class="materials-card__link">
+            <img class="material-card__img" src="../../img/overlay.png" width="555" height="259"
+                 alt="Биметаллические плиты OVERLAY">
+            <h2 class="material-card__heading">Биметаллические плиты OVERLAY</h2>
+            <p class="material-card__text">
+              Износостойкие плиты порошковые, CDP 4666, CDP 4624, CDP 3550
+            </p>
+          </a>
         </article>
 
         <article class="material-card">
-          <img class="material-card__img" src="" alt="Композитный белохромистый чугун">
-          <h2 class="material-card__heading">Композитный белохромистый чугун</h2>
-          <p class="material-card__text">
-            Надежный и износостойкий материал, разработанный для защиты от абразивного и ударного износа
-          </p>
-
+          <div class="materials-card__link">
+            <img class="material-card__img" src="../../img/chugun.png" width="555" height="259"
+                 alt="Композитный белохромистый чугун">
+            <h2 class="material-card__heading">Композитный белохромистый чугун</h2>
+            <p class="material-card__text">
+              Надежный и износостойкий материал, разработанный для защиты от абразивного и ударного износа
+            </p>
+          </div>
         </article>
 
         <article class="material-card">
-          <img class="material-card__img" src="" alt="Полимерные износостойкие материалы">
-          <h2 class="material-card__heading">Полимерные износостойкие материалы</h2>
-          <p class="material-card__text">
-            Восстановливаем, ремонтируем и защищаем оборудование полимерными материалами Henkel
-          </p>
-
+          <div class="materials-card__link">
+            <img class="material-card__img" src="../../img/resistant-polimer.png" width="555" height="259"
+                 alt="Полимерные износостойкие материалы">
+            <h2 class="material-card__heading">Полимерные износостойкие материалы</h2>
+            <p class="material-card__text">
+              Восстановливаем, ремонтируем и защищаем оборудование полимерными материалами Henkel
+            </p>
+          </div>
         </article>
       </section>
     </section>
