--- a/products-nav/services/index.html
+++ b/products-nav/services/index.html
@@ -19,7 +19,7 @@
     <nav class="nav">
       <ul class="main-menu">
         <li class="main-menu__items  nav-list__item--active">Продукция</li>
-        <li class="main-menu__items"><a href="" class="main-menu__link">Сделали</a></li>
+        <li class="main-menu__items"><a href="../../gallery-nav/index.html" class="main-menu__link">Сделали</a></li>
         <li class="main-menu__items"><a href="" class="main-menu__link">Статьи</a></li>
         <li class="main-menu__items"><a href="" class="main-menu__link">О компании</a></li>
         <li class="main-menu__items"><a href="" class="main-menu__link">Контакты</a></li>
@@ -37,14 +37,16 @@
   <div class="container">
     <section class="sub-nav">
       <ul class="sub-nav__list">
-        <li class="sub-nav__item"><a href="../../products-nav/details/index.html" class="sub-nav__link">Детали</a></li>
-        <li class="sub-nav__item"><a class="sub-nav__link">Материалы</a></li>
+        <li class="sub-nav__item"><a href="../../products-nav/details/index.html" class="sub-nav__link">Детали </a></li>
+        <li class="sub-nav__item"><a href="../../products-nav/materials/index.html" class="sub-nav__link">Материалы</a>
+        </li>
         <li class="sub-nav__item  sub-nav__item--active"><a href="" class="sub-nav__link">Услуги</a></li>
       </ul>
 
       <div class="sub-nav__form">
         <form action="" method="get">
           <input type="search" class="sub-nav__input" placeholder="Например: футеровка">
+          <a href="" class="sub-nav__link-icon"></a>
         </form>
       </div>
     </section>
@@ -52,61 +54,83 @@
     <section class="main-content">
       <div class="description  description--materials">
         <h1 class="description__heading">Услуги</h1>
-        <p class="description__text  description__text--materials">
-          Существует множество износостойких материалов, и каждый производитель будет убеждать вас, что именно его материал самый лучший, хотя это не всегда так.
+        <p class="description__text  description__text--services">
+          Мы готовы приехать к вам для эскизирования деталей и обсуждения ваших пожеланий по оптимизации конструктива.
+          После этого мы разрабатываем комплект конструкторской документации и утверждаем его у заказчика.
         </p>
-
-        <p class="description__text">
-          Вы можете быть уверены, что выбирая сотрудничество с «Веар Сервис» вы получите полную и достоверную информацию по интересующим вас материалам и исчерпывающие консультации от наших технических специалистов.
-        </p>
-
-
       </div>
 
-      <section class="materials-container">
+      <section class="services-container">
 
-        <article class="material-card  material-card--first">
-          <a href="" class="materials-card__link">
-            <img class="material-card__img" src="../../img/hardox.png" alt="Hardox" width="461" height="120">
+        <article class="services-card  services-card--first">
+          <a href="" class="services-card__link">
+            <img class="services-card__img" src="../../img/hardox-bg-service-small.png" alt="Hardox">
+            <h2 class="services-card__heading">Механическая обработка Hardox</h2>
+            <p class="services-card__text">
+              Сверление, зенкование, нарезание резьбы, точение,
+              фрезерование
+            </p>
           </a>
-          <span class="material-card__text  material-card__text--good-choice">Хороший выбор</span>
-
         </article>
 
-        <article class="material-card">
-          <img class="material-card__img" src="../../img/castolin.png" width="555" height="259" alt="Наплавочные материалы CASTOLIN">
-          <h2 class="material-card__heading">Наплавочные материалы CASTOLIN</h2>
-          <p class="material-card__text">
-            Проволока (MIG/MAG), TIG прутки, cамозащитная проволока, порошковая проволока, электроды (ММА)
-          </p>
-
+        <article class="services-card">
+          <a href="" class="services-card__link">
+            <img class="services-card__img" src="../../img/services-2.png" alt="Наплавка твердого сплава">
+            <h2 class="services-card__heading">Наплавка твердого сплава</h2>
+            <p class="services-card__text">
+              Наплавку делаем только с использованием качественных сварочных материалов Castolin
+            </p>
+          </a>
         </article>
 
-        <article class="material-card">
-          <img class="material-card__img" src="../../img/overlay.png" width="555" height="259" alt="Биметаллические плиты OVERLAY">
-          <h2 class="material-card__heading">Биметаллические плиты OVERLAY</h2>
-          <p class="material-card__text">
-            Износостойкие плиты порошковые, CDP 4666, CDP 4624, CDP 3550
-          </p>
-
+        <article class="services-card">
+          <a href="" class="services-card__link">
+            <img class="services-card__img" src="../../img/services-3.png" alt="Напыление износостойких покрытий">
+            <h2 class="services-card__heading">Напыление износостойких покрытий</h2>
+            <p class="services-card__text">
+              Используем только высококачественные порошки и оборудование Castolin, немецкого производства
+            </p>
+          </a>
         </article>
 
-        <article class="material-card">
-          <img class="material-card__img" src="../../img/chugun.png" width="555" height="259" alt="Композитный белохромистый чугун">
-          <h2 class="material-card__heading">Композитный белохромистый чугун</h2>
-          <p class="material-card__text">
-            Надежный и износостойкий материал, разработанный для защиты от абразивного и ударного износа
-          </p>
-
+        <article class="services-card">
+          <a href="" class="services-card__link">
+            <img class="services-card__img" src="../../img/services-4.png" alt="Восстановление сваркой">
+            <h2 class="services-card__heading">Восстановление сваркой</h2>
+            <p class="services-card__text">
+              Процессы сварки занимают главное место при ремонте, этим способом восстанавливают 70% всех деталей
+            </p>
+          </a>
         </article>
 
-        <article class="material-card">
-          <img class="material-card__img" src="../../img/resistant-polimer.png" width="555" height="259" alt="Полимерные износостойкие материалы">
-          <h2 class="material-card__heading">Полимерные износостойкие материалы</h2>
-          <p class="material-card__text">
-            Восстановливаем, ремонтируем и защищаем оборудование полимерными материалами Henkel
-          </p>
+        <article class="services-card">
+          <a href="" class="services-card__link">
+            <img class="services-card__img" src="../../img/services-5.png" alt="Гибка металла">
+            <h2 class="services-card__heading">Гибка металла</h2>
+            <p class="services-card__text">
+              Гибка cтали Hardox 400, 450 и 500 на современном листогибочном станке «Ermaksan»
+            </p>
+          </a>
+        </article>
 
+        <article class="services-card">
+          <a href="" class="services-card__link">
+            <img class="services-card__img" src="../../img/services-6.png" alt="Резка металла">
+            <h2 class="services-card__heading">Резка металла</h2>
+            <p class="services-card__text">
+              Резка листового металла производится на портальном станке плазменной резки Satronik LS 3000
+            </p>
+          </a>
+        </article>
+
+        <article class="services-card">
+          <a href="" class="services-card__link">
+            <img class="services-card__img" src="../../img/services-7.png" alt="Защита от износа">
+            <h2 class="services-card__heading">Защита от износа</h2>
+            <p class="services-card__text">
+              Выберем наиболее эффективное и экономически выгодное для заказчика решение проблемы износа
+            </p>
+          </a>
         </article>
       </section>
     </section>
