added about-nav and contacts-nav

--- a/about-nav/index.html
+++ b/about-nav/index.html
@@ -2,9 +2,289 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Веарсервис</title>
+  <link rel="stylesheet" href="../css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 </head>
-<body>
+<body class="about-company-bg">
+<header class="main-header">
+  <div class="header__wrapper-inner">
+    <div class="logo">
+      <a href="../index.html" class="logo__link">
+        <img src="../img/logo.svg" width="203" height="58" alt="" class="logo__img">
+      </a>
+    </div>
+
+    <nav class="nav">
+      <ul class="main-menu">
+        <li class="main-menu__items"><a href="../products-nav/details/index.html" class="main-menu__link">Продукция</a>
+        </li>
+        <li class="main-menu__items"><a href="../gallery-nav/index.html" class="main-menu__link">Сделали</a></li>
+        <li class="main-menu__items"><a href="../articles-nav/index.html" class="main-menu__link">Статьи</a></li>
+        <li class="main-menu__items  main-menu__items--active"><a href="" class="main-menu__link">О компании</a></li>
+        <li class="main-menu__items"><a href="../contacts-nav/office-and-warehouse/index.html" class="main-menu__link">Контакты</a></li>
+      </ul>
+    </nav>
+
+    <div class="phone">
+      <p class="phone__text"><span class="phone__code">+7 495 </span>727-08-09</p>
+    </div>
+
+  </div>
+</header>
+
+<main>
+  <div class="container">
+    <section class="about-company-welcome">
+      <h1 class="about-company-welcome__heading main-heading">Компания «Веар Сервис»</h1>
+      <p class="about-company-welcome__text">
+        Лидер Российского рынка по производству износостойких деталей и оказанию услуг по защите оборудования от износа.
+        Мы специализируемся на изготовлении штучных изделий из износостойкой стали Hardox и биметаллических плит
+        Overlay, выполняем работы по наплавке и напылению твердых сплавов, а также восстанавливаем изношенные детали
+        и узлы
+      </p>
+    </section>
+
+    <div class="about-company-wrapper">
+      <section class="about-company">
+        <h2 class="visually-hidden">Наша миссия, ценности, стратегии</h2>
+        <ul class="about-company__list">
+          <li class="about-company__item">
+            <h3 class="about-company__heading"><span>1</span>Миссия</h3>
+            <p class="about-company__description">
+              Компания «Веар Сервис» предлагает простые и надёжные решения по защите промышленного оборудования от износа. Мы создаем ценность, предлагая продукцию и услуги высокого качества. Повышая, экономическую эффективность производственных процессов наших партнеров, мы строим взаимовыгодные и долгосрочные отношения, которые становятся прочной основой для стабильного экономического роста и развития компании.
+            </p>
+          </li>
+
+          <li class="about-company__item">
+            <h3 class="about-company__heading"><span>2</span>Стратегия</h3>
+            <p class="about-company__description">
+              Мы тесно взаимодействуем с нашими партнерами при решении проблем износа. «Веар Сервис» предлагает широкий спектр услуг и экспертные консультации, а также решения, которые позволяют сэкономить нашим клиентам время и деньги. Мы осуществляем разработку, производство и внедрение наиболее эффективных решений. Добиваясь сокращения затрат наших клиентов, мы стремимся к долгосрочному сотрудничеству и делаем всё возможное, чтобы с нами было выгодно и удобно работать.
+            </p>
+          </li>
+
+          <li class="about-company__item">
+            <h3 class="about-company__heading"><span>3</span>Ценности</h3>
+            <p class="about-company__description  about-company__description--values">
+              Люди — это наша ценность и главное конкурентное преимущество. Мы стремимся создать атмосферу, в которой каждый человек, работающий в организации, сможет самореализоваться и добиться максимальных результатов.
+            </p>
+
+            <p class="about-company__description  about-company__description--values">
+              Качество — это приоритет № 1 во всем, что мы делаем. Качество — это наша работа, а производство товаров и услуг, которые стоят своих денег это наша цель.
+            </p>
+
+            <p class="about-company__description  about-company__description--values">
+              Фокусирование внимания на клиенте — мы стараемся понять бизнес наших клиентов настолько глубоко, насколько это возможно. Именно это понимание, позволяет максимально полно удовлетворять потребности наших клиентов и производить конкурентную продукцию.
+            </p>
+
+            <p class="about-company__description  about-company__description--values">
+              Эффективность — мы полностью используем свои ресурсы, не делаем лишних затрат и занимаемся только тем, что умеем делать лучше других.
+            </p>
+
+            <p class="about-company__description  about-company__description--values">
+              Взаимовыгодность — взаимная выгода это двусторонняя выгода, а такая выгода приобретает постоянство. Мы нацелены на долгосрочные отношения и взаимовыгодность лежит в их основе.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="management">
+        <img src="../img/diakov.jpg" alt="Генеральный директор ООО «Веар Сервис» Дьяков Михаил Александрович" class="management__img">
+        <p class="management__description">
+          Генеральный директор ООО «Веар Сервис» Дьяков Михаил Александрович
+        </p>
+
+      </section>
+    </div>
+  </div>
+</main>
+
+
+<footer class="footer">
+  <div class="footer__wrapper">
+    <div class="footer-top">
+      <div class="footer-top__wrapper">
+        <div class="footer-top__wrapper-inner">
+          <div class="footer-top__column">
+            <div class="footer-top__cat-menu">
+              <h2 class="footer-top__cat-menu-title">Компания "Веар Сервис"</h2>
+              <ul class="footer-top__cat-menu-list">
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">О нас</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Производственные возможности</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Новости</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Статьи</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Контакты</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-top__column">
+            <div class="footer-top__cat-menu">
+              <h2 class="footer-top__cat-menu-title">Материалы</h2>
+              <ul class="footer-top__cat-menu-list">
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Hardox</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Кастолин</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Quard</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Relia</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Weldox</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Domex</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Creusabro</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Eutalloy</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Xar</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Лист футеровочный</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Износостойкие покрытия</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Высокопрочная сталь</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer-top__column">
+            <div class="footer-top__cat-menu">
+              <h2 class="footer-top__cat-menu-title">Продукция</h2>
+              <ul class="footer-top__cat-menu-list">
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Дорожно-строительной техники</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Дробильно-сортировочного оборудования</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Оборудования вторичной обработки</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Бетоносмесителей</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link  footer-top__cat-menu-link--last">Прочая продукция</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer-top__cat-menu">
+              <h2 class="footer-top__cat-menu-title">Изделия</h2>
+              <ul class="footer-top__cat-menu-list">
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Ножи</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Сита</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Футеровки</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Броня</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Плиты и пластины</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Прочее</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="footer-top__column">
+            <div class="footer-top__cat-menu">
+              <h2 class="footer-top__cat-menu-title">Услуги</h2>
+              <ul class="footer-top__cat-menu-list">
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Обработка Hardox</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Наплавка</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Напыление металла</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Восстановление сваркой</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Гибка металла</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Резка металла</a>
+                </li>
+                <li class="footer-top__cat-menu-items">
+                  <a href="" class="footer-top__cat-menu-link">Защита от износа</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-low">
+      <div class="footer-low__wrapper">
+        <div class="footer-low__wrapper-inner">
+
+          <div class="footer-low__column">
+            <p class="footer-low__phone">
+              +7 495 727-08-09
+            </p>
+            <a href="" class="footer-low__email">info@wearservice.ru</a>
+            <p class="footer-low__address">
+              ул. Елецкая, д. 26, кор. 2,
+              г. Москва, 115583
+            </p>
+          </div>
+
+
+          <div class="footer-low__column">
+
+            <div class="footer-low__social">
+              <a href="" class="footer-low__facebook-link footer-low__social-link" target="_blank" title="Facebook">Facebook</a>
+              <a href="" class="footer-low__youtube-link footer-low__social-link" target="_blank" title="YouTube">YouTube</a>
+              <a href="" class="footer-low__instagram-link footer-low__social-link" target="_blank" title="Instagram">Instagram</a>
+            </div>
+
+            <div class="footer-low__copyright">
+              ООО «Веар Сервис» © 2014—2018
+              <a href="/privacy_policy/" class="footer-low__copyright-link">Политика конфидициальности</a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 
 </body>
 </html>
