--- a/contacts-nav/office-and-warehouse/index.html
+++ b/contacts-nav/office-and-warehouse/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Веарсервис</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../../css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 </head>
 <body>
 <header class="main-header">
   <div class="header__wrapper-inner">
     <div class="logo">
-      <a href="../index.html" class="logo__link">
-        <img src="../img/logo.svg" width="203" height="58" alt="" class="logo__img">
+      <a href="../../index.html" class="logo__link">
+        <img src="../../img/logo.svg" width="203" height="58" alt="" class="logo__img">
       </a>
     </div>
 
     <nav class="nav">
       <ul class="main-menu">
-        <li class="main-menu__items"><a href="../products-nav/details/index.html" class="main-menu__link">Продукция</a>
+        <li class="main-menu__items"><a href="../../products-nav/details/index.html" class="main-menu__link">Продукция</a>
         </li>
-        <li class="main-menu__items"><a href="../gallery-nav/index.html" class="main-menu__link">Сделали</a></li>
-        <li class="main-menu__items  main-menu__items--active"><a href="" class="main-menu__link">Статьи</a></li>
-        <li class="main-menu__items"><a href="../about-nav/index.html" class="main-menu__link">О компании</a></li>
-        <li class="main-menu__items"><a href="../contacts-nav/office-and-warehouse/index.html" class="main-menu__link">Контакты</a></li>
+        <li class="main-menu__items"><a href="../../gallery-nav/index.html" class="main-menu__link">Сделали</a></li>
+        <li class="main-menu__items"><a href="../../articles-nav/index.html" class="main-menu__link">Статьи</a></li>
+        <li class="main-menu__items"><a href="../../about-nav/index.html" class="main-menu__link">О компании</a></li>
+        <li class="main-menu__items  main-menu__items--active"><a class="main-menu__link">Контакты</a></li>
       </ul>
     </nav>
 
@@ -36,65 +36,56 @@
 
 <main>
   <div class="container">
-    <section class="articles-container">
-      <h1 class="articles-container__heading main-heading">Статьи</h1>
-      <article class="article-card">
-        <a href="" class="article-card__link">
-          <p class="article-card__date">3 дня назад</p>
-          <h2 class="article-card__heading">Качество — это наша работа</h2>
-          <p class="article-card__description">Компания «Веар Сервис» является лидером российского рынка по производству износостойких деталей и защите оборудования от износа. Специализация предприятия — это изготовление деталей из износостойкой стали Hardox и других высокопрочных материалов</p>
-        </a>
-      </article>
-
-      <article class="article-card">
-        <a href="" class="article-card__link">
-          <p class="article-card__date">24 марта</p>
-          <h2 class="article-card__heading">Наплавленная плита CDP — лучшее решение для брони бетоносмесителя</h2>
-          <p class="article-card__description">Компания «Веар Сервис» изготовила донную броню бетоносмесителя Schlosser-Pfeiffer SM-3750 из наплавленных плит CDP</p>
-        </a>
-      </article>
-
-      <article class="article-card">
-        <a href="" class="article-card__link">
-          <p class="article-card__date">22 декабря 2016</p>
-          <h2 class="article-card__heading">В поисках новой стратегии борьбы с износом</h2>
-          <p class="article-card__description">В любом механизме и оборудовании есть слабое звено — деталь, которая выходит из строя первой, приводя к приносящей убытки остановке работы всего устройства</p>
-        </a>
-      </article>
-
-      <article class="article-card">
-        <a href="" class="article-card__link">
-          <p class="article-card__date">3 октября 2016</p>
-          <h2 class="article-card__heading">Высокопрочные стали для спецтехники и оборудования</h2>
-          <p class="article-card__description">Во многих языках мира есть устойчивое выражение «крепкий, как железо». Металлы, и железо первое из них, веками были для людей синонимом твердости, непреклонности в выполнении поставленной задачи. Этот устойчивый образ вполне понятен и нам, хотя в начале третьего тысячелетия вернее было бы сказать «крепкий как сталь» — прочный, износостойкий сплав, хорошо справляющийся с обработкой как других металлов, так и абразивных горных пород</p>
-        </a>
-      </article>
-
-      <article class="article-card">
-        <a href="" class="article-card__link">
-          <p class="article-card__date">14 февраля 2016</p>
-          <h2 class="article-card__heading">HARDOX — надежные решения для сельского хозяйства</h2>
-          <p class="article-card__description">В России находится 10 % всех пахотных земель мира. Свыше 4/5 пашни в России приходится на Центральное Поволжье, Северный Кавказ, Урал и Западную Сибирь. Основные сельскохозяйственные культуры: зерновые, сахарная свекла, подсолнечник, картофель, лён</p>
-        </a>
-      </article>
-
-      <article class="article-card">
-        <a href="" class="article-card__link">
-          <p class="article-card__date">14 октября 2015</p>
-          <h2 class="article-card__heading">HARDOX — Ваше конкурентное преимущество</h2>
-          <p class="article-card__description">Конкурентоспособность современных промышленных предприятий во многом зависит от производительности и надежности используемого оборудования</p>
-        </a>
-      </article>
-
-      <article class="article-card">
-        <a href="" class="article-card__link">
-          <p class="article-card__date">10 сентября 2015</p>
-          <h2 class="article-card__heading">Износостойкие детали HARDOX, made in Russia</h2>
-          <p class="article-card__description">Нас приучили к тому, что всё произведенное за границей это хорошо, а к Российским производителям и товарам большинство из нас относится скептически</p>
-        </a>
-      </article>
-
+    <h1 class="contacts-nav-heading main-heading">Контактная информация</h1>
+    <section class="sub-nav  sub-nav--contacts-nav">
+      <ul class="sub-nav__list">
+        <li class="sub-nav__item  sub-nav__item--active"><a href="" class="sub-nav__link">Офис и склад</a></li>
+        <li class="sub-nav__item"><a href="../contacts/index.html" class="sub-nav__link">Контактные лица</a></li>
+        <li class="sub-nav__item"><a href="../requisites/index.html" class="sub-nav__link">Реквизиты</a></li>
+      </ul>
     </section>
+
+    <div class="contacts-content">
+      <section class="map">
+        <h3 class="visually-hidden">Карта офиса ВеарСервис</h3>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2254.144430269618!2d37.73454731626231!3d55.59949998051265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414ab174e9852ca5%3A0x273c7a48409d5d83!2z0JXQu9C10YbQutCw0Y8g0YPQuy4sIDI2INGB0YLRgNC-0LXQvdC40LUgMiwg0JzQvtGB0LrQstCwLCAxMTU1ODM!5e0!3m2!1sru!2sru!4v1521010960824"
+                allowfullscreen></iframe>
+
+      </section>
+
+      <section class="contacts-details">
+        <div class="contacts-details__phone">
+          <h3 class="contacts-details__heading">Звоните</h3>
+          <p>+7 495 727-08-09</p>
+        </div>
+
+        <div class="contacts-details__mail">
+          <h3 class="contacts-details__heading">Пишите</h3>
+          <a href="mailto:info@wearservice.ru">info@wearservice.ru</a>
+        </div>
+
+        <div class="contacts-details__welcome">
+          <h3 class="contacts-details__heading">Приезжайте</h3>
+          <p>Елецкая, д. 26, кор. 2, г. Москва, 115583</p>
+
+        </div>
+
+        <div class="contacts-details__hours">
+          <h3 class="contacts-details__heading">Режим работы</h3>
+          <p>Офис: 9:00 — 18:00 (понедельник — пятница)</p>
+          <p>Склад: 9:00 — 18:00 (понедельник — пятница)</p>
+
+        </div>
+
+        <div class="contacts-details__gps">
+          <h3 class="contacts-details__heading">Координаты для GPS-навигатора</h3>
+          <p>Широта (N): 55°35.991″ с. ш.</p>
+          <p>Долгота (E): 037°44.111″ в. д..</p>
+
+        </div>
+      </section>
+    </div>
 
 
   </div>
@@ -288,3 +279,8 @@
 
 </body>
 </html>
+
+
+
+
+
