--- a/contacts-nav/requisites/index.html
+++ b/contacts-nav/requisites/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Веарсервис</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../../css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
 </head>
 <body>
 <header class="main-header">
   <div class="header__wrapper-inner">
     <div class="logo">
-      <a href="../index.html" class="logo__link">
-        <img src="../img/logo.svg" width="203" height="58" alt="" class="logo__img">
+      <a href="../../index.html" class="logo__link">
+        <img src="../../img/logo.svg" width="203" height="58" alt="" class="logo__img">
       </a>
     </div>
 
     <nav class="nav">
       <ul class="main-menu">
-        <li class="main-menu__items"><a href="../products-nav/details/index.html" class="main-menu__link">Продукция</a>
+        <li class="main-menu__items"><a href="../../products-nav/details/index.html" class="main-menu__link">Продукция</a>
         </li>
-        <li class="main-menu__items"><a href="../gallery-nav/index.html" class="main-menu__link">Сделали</a></li>
-        <li class="main-menu__items  main-menu__items--active"><a href="" class="main-menu__link">Статьи</a></li>
-        <li class="main-menu__items"><a href="../about-nav/index.html" class="main-menu__link">О компании</a></li>
-        <li class="main-menu__items"><a href="../contacts-nav/office-and-warehouse/index.html" class="main-menu__link">Контакты</a></li>
+        <li class="main-menu__items"><a href="../../gallery-nav/index.html" class="main-menu__link">Сделали</a></li>
+        <li class="main-menu__items"><a href="../../articles-nav/index.html" class="main-menu__link">Статьи</a></li>
+        <li class="main-menu__items"><a href="../../about-nav/index.html" class="main-menu__link">О компании</a></li>
+        <li class="main-menu__items  main-menu__items--active"><a class="main-menu__link">Контакты</a></li>
       </ul>
     </nav>
 
@@ -36,65 +36,55 @@
 
 <main>
   <div class="container">
-    <section class="articles-container">
-      <h1 class="articles-container__heading main-heading">Статьи</h1>
-      <article class="article-card">
-        <a href="" class="article-card__link">
-          <p class="article-card__date">3 дня назад</p>
-          <h2 class="article-card__heading">Качество — это наша работа</h2>
-          <p class="article-card__description">Компания «Веар Сервис» является лидером российского рынка по производству износостойких деталей и защите оборудования от износа. Специализация предприятия — это изготовление деталей из износостойкой стали Hardox и других высокопрочных материалов</p>
-        </a>
-      </article>
-
-      <article class="article-card">
-        <a href="" class="article-card__link">
-          <p class="article-card__date">24 марта</p>
-          <h2 class="article-card__heading">Наплавленная плита CDP — лучшее решение для брони бетоносмесителя</h2>
-          <p class="article-card__description">Компания «Веар Сервис» изготовила донную броню бетоносмесителя Schlosser-Pfeiffer SM-3750 из наплавленных плит CDP</p>
-        </a>
-      </article>
-
-      <article class="article-card">
-        <a href="" class="article-card__link">
-          <p class="article-card__date">22 декабря 2016</p>
-          <h2 class="article-card__heading">В поисках новой стратегии борьбы с износом</h2>
-          <p class="article-card__description">В любом механизме и оборудовании есть слабое звено — деталь, которая выходит из строя первой, приводя к приносящей убытки остановке работы всего устройства</p>
-        </a>
-      </article>
-
-      <article class="article-card">
-        <a href="" class="article-card__link">
-          <p class="article-card__date">3 октября 2016</p>
-          <h2 class="article-card__heading">Высокопрочные стали для спецтехники и оборудования</h2>
-          <p class="article-card__description">Во многих языках мира есть устойчивое выражение «крепкий, как железо». Металлы, и железо первое из них, веками были для людей синонимом твердости, непреклонности в выполнении поставленной задачи. Этот устойчивый образ вполне понятен и нам, хотя в начале третьего тысячелетия вернее было бы сказать «крепкий как сталь» — прочный, износостойкий сплав, хорошо справляющийся с обработкой как других металлов, так и абразивных горных пород</p>
-        </a>
-      </article>
-
-      <article class="article-card">
-        <a href="" class="article-card__link">
-          <p class="article-card__date">14 февраля 2016</p>
-          <h2 class="article-card__heading">HARDOX — надежные решения для сельского хозяйства</h2>
-          <p class="article-card__description">В России находится 10 % всех пахотных земель мира. Свыше 4/5 пашни в России приходится на Центральное Поволжье, Северный Кавказ, Урал и Западную Сибирь. Основные сельскохозяйственные культуры: зерновые, сахарная свекла, подсолнечник, картофель, лён</p>
-        </a>
-      </article>
-
-      <article class="article-card">
-        <a href="" class="article-card__link">
-          <p class="article-card__date">14 октября 2015</p>
-          <h2 class="article-card__heading">HARDOX — Ваше конкурентное преимущество</h2>
-          <p class="article-card__description">Конкурентоспособность современных промышленных предприятий во многом зависит от производительности и надежности используемого оборудования</p>
-        </a>
-      </article>
-
-      <article class="article-card">
-        <a href="" class="article-card__link">
-          <p class="article-card__date">10 сентября 2015</p>
-          <h2 class="article-card__heading">Износостойкие детали HARDOX, made in Russia</h2>
-          <p class="article-card__description">Нас приучили к тому, что всё произведенное за границей это хорошо, а к Российским производителям и товарам большинство из нас относится скептически</p>
-        </a>
-      </article>
-
+    <h1 class="contacts-nav-heading main-heading">Контактная информация</h1>
+    <section class="sub-nav  sub-nav--contacts-nav">
+      <ul class="sub-nav__list">
+        <li class="sub-nav__item"><a href="../office-and-warehouse/index.html" class="sub-nav__link">Офис и склад</a></li>
+        <li class="sub-nav__item"><a href="../contacts/index.html" class="sub-nav__link">Контактные лица</a></li>
+        <li class="sub-nav__item  sub-nav__item--active"><a href="" class="sub-nav__link">Реквизиты</a></li>
+      </ul>
     </section>
+
+    <div class="requisites">
+      <div class="requisites__details">
+        <div class="requisites__name">
+          <h3 class="requisites__heading">Наименование</h3>
+          <p class="requisites__description  requisites__description--name">
+            ООО «ВЕАР СЕРВИС»
+            ИНН 7724910906 КПП 772401001
+            ОКПО 29040842
+            ОГРН 1147746179965
+          </p>
+        </div>
+
+        <div class="requisites__name">
+          <h3 class="requisites__heading">Юридический адрес</h3>
+          <p class="requisites__description">ул. Елецкая, д.26, офис 4А, г. Москва, 115583</p>
+        </div>
+
+        <div class="requisites__name">
+          <h3 class="requisites__heading">Генеральный директор</h3>
+          <p class="requisites__description">Дьяков Михаил Александрович</p>
+        </div>
+      </div>
+
+      <div class="requisites__details">
+        <div class="requisites__name">
+          <h3 class="requisites__heading">Банковские реквизиты</h3>
+          <p class="requisites__description  requisites__description--bank">
+            р/с 40702810502000100776
+            в АО «Нордеа Банк»
+            БИК 044525990
+            к/с 30101810145250000990
+          </p>
+        </div>
+
+        <div class="requisites__name">
+          <h3 class="requisites__heading">Почтовый адрес</h3>
+          <p class="requisites__description">ул. Елецкая, д.26, офис 4А, г. Москва, 115583</p>
+        </div>
+      </div>
+    </div>
 
 
   </div>
@@ -288,3 +278,8 @@
 
 </body>
 </html>
+
+
+
+
+
