--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header__wrapper">
       <div class="header__wrapper-inner">
         <div class="logo">
-          <a class="logo__link">
+          <a class="logo__link  logo__link--main-page">
             <img src="img/logo.svg" width="203" height="58" alt="" class="logo__img">
           </a>
         </div>
@@ -49,7 +49,7 @@
           <div class="promo__video">
             <a href="" class="promo__video-link">Посмотреть видео о компании</a>
           </div>
-          <a href="" class="btn  promo__btn">Продукция</a>
+          <a href="products-nav/details/index.html" class="btn  promo__btn">Продукция</a>
         </div>
       </section>
 
@@ -85,7 +85,7 @@
 
         </div>
 
-        <a href="" class="about__btn  btn">О компании</a>
+        <a href="about-nav/index.html" class="about__btn  btn">О компании</a>
       </section>
 
       <section class="features">
