--- a/contacts-nav/office-and-warehouse/index.html
+++ b/contacts-nav/office-and-warehouse/index.html
@@ -49,8 +49,7 @@
       <section class="map">
         <h3 class="visually-hidden">Карта офиса ВеарСервис</h3>
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2254.144430269618!2d37.73454731626231!3d55.59949998051265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414ab174e9852ca5%3A0x273c7a48409d5d83!2z0JXQu9C10YbQutCw0Y8g0YPQuy4sIDI2INGB0YLRgNC-0LXQvdC40LUgMiwg0JzQvtGB0LrQstCwLCAxMTU1ODM!5e0!3m2!1sru!2sru!4v1521010960824"
-                allowfullscreen></iframe>
+        <iframe src="https://yandex.ru/map-widget/v1/-/CBeLF4tGgA"></iframe>
 
       </section>
 
@@ -185,7 +184,7 @@
               </ul>
             </div>
             <div class="footer-top__cat-menu">
-              <h2 class="footer-top__cat-menu-title">Изделия</h2>
+              <h2 class="footer-top__cat-menu-title  footer-top__cat-menu-title--margin-top">Изделия</h2>
               <ul class="footer-top__cat-menu-list">
                 <li class="footer-top__cat-menu-items">
                   <a href="" class="footer-top__cat-menu-link">Ножи</a>
