--- a/products-nav/details/index.html
+++ b/products-nav/details/index.html
@@ -75,7 +75,7 @@
         </article>
 
         <article class="detail-card">
-          <a href="" class="detail-card__link">
+          <a href="building-tracks/index.html" class="detail-card__link">
             <img class="detail-card__img" src="../../img/road-constraction.png" width="360" height="260"
                  alt="Дорожно-строительная">
             <h2 class="detail-card__heading">Дорожно-строительная</h2>
@@ -220,7 +220,7 @@
               </ul>
             </div>
             <div class="footer-top__cat-menu">
-              <h2 class="footer-top__cat-menu-title">Изделия</h2>
+              <h2 class="footer-top__cat-menu-title  footer-top__cat-menu-title--margin-top">Изделия</h2>
               <ul class="footer-top__cat-menu-list">
                 <li class="footer-top__cat-menu-items">
                   <a href="" class="footer-top__cat-menu-link">Ножи</a>
