--- a/about-nav/index.html
+++ b/about-nav/index.html
@@ -22,7 +22,7 @@
         </li>
         <li class="main-menu__items"><a href="../gallery-nav/index.html" class="main-menu__link">Сделали</a></li>
         <li class="main-menu__items"><a href="../articles-nav/index.html" class="main-menu__link">Статьи</a></li>
-        <li class="main-menu__items  main-menu__items--active"><a href="" class="main-menu__link">О компании</a></li>
+        <li class="main-menu__items  main-menu__items--active"><a class="main-menu__link">О компании</a></li>
         <li class="main-menu__items"><a href="../contacts-nav/office-and-warehouse/index.html" class="main-menu__link">Контакты</a></li>
       </ul>
     </nav>
@@ -194,7 +194,7 @@
               </ul>
             </div>
             <div class="footer-top__cat-menu">
-              <h2 class="footer-top__cat-menu-title">Изделия</h2>
+              <h2 class="footer-top__cat-menu-title  footer-top__cat-menu-title--margin-top">Изделия</h2>
               <ul class="footer-top__cat-menu-list">
                 <li class="footer-top__cat-menu-items">
                   <a href="" class="footer-top__cat-menu-link">Ножи</a>
