--- a/products-nav/materials/index.html
+++ b/products-nav/materials/index.html
@@ -18,7 +18,7 @@
 
     <nav class="nav">
       <ul class="main-menu">
-        <li class="main-menu__items  nav-list__item--active">Продукция</li>
+        <li class="main-menu__items  main-menu__items--active"><a class="main-menu__link">Продукция</a></li>
         <li class="main-menu__items"><a href="../../gallery-nav/index.html" class="main-menu__link">Сделали</a></li>
         <li class="main-menu__items"><a href="../../articles-nav/index.html" class="main-menu__link">Статьи</a></li>
         <li class="main-menu__items"><a href="../../about-nav/index.html" class="main-menu__link">О компании</a></li>
@@ -222,7 +222,7 @@
               </ul>
             </div>
             <div class="footer-top__cat-menu">
-              <h2 class="footer-top__cat-menu-title">Изделия</h2>
+              <h2 class="footer-top__cat-menu-title  footer-top__cat-menu-title--margin-top">Изделия</h2>
               <ul class="footer-top__cat-menu-list">
                 <li class="footer-top__cat-menu-items">
                   <a href="" class="footer-top__cat-menu-link">Ножи</a>
