--- a/products-nav/materials/index.html
+++ b/products-nav/materials/index.html
@@ -101,29 +101,28 @@
         </article>
 
         <article class="material-card">
-          <div class="materials-card__link">
+          <a href="" class="materials-card__link">
             <img class="material-card__img" src="../../img/chugun.png" width="555" height="259"
                  alt="Композитный белохромистый чугун">
             <h2 class="material-card__heading">Композитный белохромистый чугун</h2>
             <p class="material-card__text">
               Надежный и износостойкий материал, разработанный для защиты от абразивного и ударного износа
             </p>
-          </div>
+          </a>
         </article>
 
         <article class="material-card">
-          <div class="materials-card__link">
+          <<a href="" class="materials-card__link">
             <img class="material-card__img" src="../../img/resistant-polimer.png" width="555" height="259"
                  alt="Полимерные износостойкие материалы">
             <h2 class="material-card__heading">Полимерные износостойкие материалы</h2>
             <p class="material-card__text">
               Восстановливаем, ремонтируем и защищаем оборудование полимерными материалами Henkel
             </p>
-          </div>
+          </a>
         </article>
       </section>
     </section>
-
 
   </div>
 </main>
