--- a/products-nav/materials/index.html
+++ b/products-nav/materials/index.html
@@ -62,8 +62,6 @@
           Вы можете быть уверены, что выбирая сотрудничество с «Веар Сервис» вы получите полную и достоверную информацию
           по интересующим вас материалам и исчерпывающие консультации от наших технических специалистов.
         </p>
-
-
       </div>
 
       <section class="materials-container">
@@ -112,7 +110,7 @@
         </article>
 
         <article class="material-card">
-          <<a href="" class="materials-card__link">
+          <a href="" class="materials-card__link">
             <img class="material-card__img" src="../../img/resistant-polimer.png" width="555" height="259"
                  alt="Полимерные износостойкие материалы">
             <h2 class="material-card__heading">Полимерные износостойкие материалы</h2>
